# rsmorphy_lemmatizer

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  build-wheels.sh  build-wheels_2_28.sh  docker-build-manylinus-2-28-x86-64.sh  docker-build-manylinus-2014-x86-64.sh  pyproject.toml  setup.py  windows-build.bat  windows-buld.bat
rsmorphy_lemmatizer/: __init__.py
src/: lib.rs
