[package]
name = "rsmorphy_lemmatizer"
version = "0.1.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsmorphy_lemmatizer"
crate-type = ["cdylib"]

[dependencies]
rsmorphy = { git = "https://github.com/g-alexander/rsmorphy.git" }
pyo3 = {version = "0.25.1", features = ["extension-module"]}
regex = "1.11.1"
rayon = "1.10.0"
